--- a/onboard/css/modal.css
+++ b/onboard/css/modal.css
@@ -1,15 +1,17 @@
 
+body{
+    position: absolute;
+    font-size: 1em;
+    overflow: hidden;
+    margin: 0;
+    height: 100%;
+    width: 100%;
+    text-align: center;
+}
+
 /* The Modal (background) */
 .modal {
-    display: none; /* Hidden by default */
-    position: fixed; /* Stay in place */
-    z-index: 1; /* Sit on top */
-    padding-top: 5%; /* Location of the box */
-    left: 0;
-    top: 0;
-    width: 100%; /* Full width */
-    height: 100%; /* Full height */
-    overflow: auto; /* Enable scroll if needed */
+
     background-color: rgb(0,0,0); /* Fallback color */
     background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
     -webkit-animation-name: animateBack;
@@ -22,13 +24,11 @@
 .modal-content {
     position: relative;
     background-color: #fefefe;
-    margin: auto;
-    padding: 0;
-    padding-right: 2%;
-    padding-left: 2%;
-    padding-bottom: 2%;
+    padding: 2vh;
     border: 2px solid #888;
-    width: 30vw;
+    width: 90%;
+    top:0%;
+    max-width: 600px; 
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
     -webkit-animation-name: animatetop;
     -webkit-animation-duration: 0.5s;
@@ -96,25 +96,21 @@
 }
 
 .navigation{
-    padding: 1%;
-    padding-top: 5%;
     background-color: #ffffff;
 }
 
 .modal-header {
-    padding: 2px 16px;
     background-color: #ffffff;
     text-align: center;
 }
 
 .modal-body {
-    padding: 2px 16px;
     text-align: center;
 }
 
 .modal-footer {
-    padding: 2px 16px;
-    background-color: #ffffff;
+    font-size: 1em;
+    width: 100%;
     color: black;
     text-align: center;
 }
@@ -150,7 +146,7 @@ h3:after {
 }
 
 .inputText {
-    padding: 0.5vw;
+    margin: 1vh;
     border-width: 2px;
     border-color: #CCCCCC;
     background-color: #FFFFFF;
@@ -159,10 +155,9 @@ h3:after {
     border-radius: 8px;
     box-shadow: 0px 0px 0px rgba(66,66,66,.75);
     text-shadow: undefined 0px 0px 5px px rgba(66,66,66,.75);
-    width: 20vw;
-    margin-bottom: 0.5vw;
-    font-size: 1vw;
+    width: 80%;
     font-family: 'Open Sans', sans-serif;
+    text-align: center;
 }
 
 .logoSize{
@@ -182,54 +177,50 @@ h3:after {
 
 .smallPink{
     color: #d23587;
-    font-size: 1.5vw;
     text-align: center;
 }
 
 .fontOpenSans{
     font-family: 'Open Sans', sans-serif;
+    
 }
 
 .agreeLegend{
     text-align: justify; 
-    font-size: 1vw;
     color: dimgrey;
 }
 
 .agreeLink{
     text-align: justify; 
-    font-size: 1vw;
     color: #444444;
     text-decoration: underline;
     font-weight: bold;
 }
 
+/*BANNER*/
 .topImg{
-    width: 50%;
-    height: 80%;
     margin: auto;
-    margin-left: 25%;
-    margin-top: 8%;
     display: flex;
     justify-content: space-around;
+    align-items: center;
 }
-.topImg img{
-	width:100%;
-    height: 100%;
+.topImg .particule{
+	width:15%;
+    max-width: 200px;
+}
+
+.topImg .logo{
+	width:80%;
+    max-width: 200px;
 }
 
 .recoverBtn {
-    background-color:#ffffff;
-    
-    border-width: 0px;
-
+    border-style: none;
 	border-radius:5px;
     display:inline-block;
     cursor:pointer;
-    width: 21.5vw;
 	color:#ff4040;
 	font-family: 'Open Sans', sans-serif;
-	font-size:0.9vw;
     }
 
 .recoverBtn:hover {
@@ -237,21 +228,22 @@ h3:after {
 }
 
 .loginBtn {
-    background: url('../images/button-login.png') no-repeat;
-    background-size: cover;
-    padding: 1vw;
-    border-width: 2px;
+    background-color: #1fc3ff;
+    box-shadow: 0px 1vh 0px #0b526c;
+    padding: 1vh;
+    margin: 1vh;
     border-radius: 8px;
-    border-style: solid;
-    display:inline-block;
+    border-style: none;
     cursor:pointer;
-    width: 21.5vw;
-    margin-bottom: 0.5vw;
+    width: 80%;
+    max-width: 200px;
+    color: #FFF;
+    font-size: 2.5vh;
 }
 
 .loginBtn:hover {
-    background: url('../images/button-login-hover.png') no-repeat;
-    background-size: cover;
+    margin-top:10px;
+    box-shadow: 0px 0vh 0px #0b526c;
 }
 
 .loginBtn:active {
@@ -261,20 +253,20 @@ h3:after {
         
 .fbBtn {
     background: url('../images/button-facebook.png') no-repeat;
-    background-size: cover;
-    padding: 1vw;
-    border-width: 2px;
-    border-radius: 8px;
-    border-style: solid;
+    background-size: contain;
+     background-position: center;
+    padding: 2vh;
+    border-style: none;
     display:inline-block;
     cursor:pointer;
-    width: 21.5vw;
-    margin-bottom: 0.2vw;
+    width: 100%;
+    margin-bottom: 2vh;
 }
 
 .fbBtn:hover {
     background: url('../images/button-facebook-hover.png') no-repeat;
-    background-size: cover;
+    background-size: contain;
+    background-position: center;
 }
 .fbBtn:active {
     position:relative;
@@ -283,19 +275,20 @@ h3:after {
         
 .googleBtn {
     background: url('../images/button-google.png') no-repeat;
-    background-size: cover;
-    padding: 1vw;
-    border-width: 2px;
-    border-radius: 8px;
-    border-style: solid;
+    background-size: contain;
+    background-position: center;
+    padding: 2vh;
+    border-style: none;
     display:inline-block;
     cursor:pointer;
-    width: 21.5vw;
+    width: 100%;
+    margin-bottom: 2vh;
 }
 
 .googleBtn:hover {
     background: url('../images/button-google-hover.png') no-repeat;
-    background-size: cover;
+    background-size: contain;
+    background-position: center;    
 }
 .googleBtn:active {
     position:relative;
@@ -388,20 +381,20 @@ h3:after {
 
 .createAccountBtn {
     background: url('../images/button-login.png') no-repeat;
-    background-size: cover;
-    padding: 1vw;
+    background-size: contain;
+    background-position: center;
+    padding: 2vh;
     border-width: 2px;
     border-radius: 8px;
-    border-style: solid;
+    border-style: none;
     display:inline-block;
     cursor:pointer;
-    width: 21.5vw;
-    margin-bottom: 0.5vw;
+    width: 100%;
 }
 
 .createAccountBtn:hover {
     background: url('../images/button-login-hover.png') no-repeat;
-    background-size: cover;
+    background-size: contain;
 }
 
 .createAccountBtn:active {
@@ -413,6 +406,12 @@ input[type=text]:focus {
     border: 2px solid #555;
 }
 
+#error{
+    color: red;
+}
+#recover{
+    color:deepskyblue;
+}
 
 
 
