--- a/epicweb/videoplayer/css/app-video.css
+++ b/epicweb/videoplayer/css/app-video.css
@@ -2,8 +2,10 @@ html{
 overflow: hidden;
     position: absolute;
     background-color:#B72BD6 !important;
-    background-image: url("../images/bg-webisodes-main.png") !important;
-    background-position: left !important;
+    background-image: url("../images/texture.png") !important;
+    background-position: center;
+    background-size: cover;
+    background-repeat: repeat;
     margin:0%;
     height: 100%;
     width: 100%;    
@@ -19,6 +21,11 @@ body{
 }
 .videoSection{ 
     margin-top: 0%;
+    background-image: url("../images/clouds.png");
+    background-size: contain;
+    background-repeat: repeat-x;
+    background-position: 100% 110%;
+    z-index: 477;
 }
 
 
@@ -38,9 +45,35 @@ video{
 
 .videolist img{
     width: 100%;
-    padding: 0vh;
+    padding: 1vh;
 }
 
 .lock{
     opacity: 0.5;
+}
+
+.namesectionvideo{
+    background-color: #ffc043;
+    width: 100%;
+    margin: 0 auto;
+    color:#FFF;
+    font-size: 3vh;
+    font-weight: 900;
+    padding: 1vh;
+}
+
+.white-bg{
+    position: absolute;
+    width: 100%;
+    height: 180px;
+    background-color: white;
+}
+
+.title-text{
+    color: white;
+    font-weight: 900;
+}
+
+
+.container-player{
 }
