--- a/assets/css/play.css
+++ b/assets/css/play.css
@@ -446,7 +446,7 @@ a.article, a.article:hover {
 }
 
 .video-title-container p{
-  font-size: 24px;
+  font-size: 3vw;
   font-weight: 500;
   text-align: center;
   padding: 10px 0;
