--- a/assets/css/letsplay.css
+++ b/assets/css/letsplay.css
@@ -60,6 +60,7 @@ body{
 
 #tab-minigames{
     margin-top: -10%;
+    margin-left: 5%;
 }
 
 .img-minigames{
@@ -94,6 +95,15 @@ body{
     box-shadow: 10px 10px 0px #3B91FF;
 }
 
+        .minigameBg{
+    height: 15vh;
+    background-size: cover;
+    background-position: center center;
+    border-radius: 1vw;
+    margin: 1vh;
+    width: 30%;
+    min-height: 180px;
+        }
 
 
 @media only screen and (min-width: 1px) and (max-width:1150px) {
@@ -120,9 +130,25 @@ body{
     .wallpaper-thumb {
         width: 113px;
     }
+        .minigameBg{
+    background-size: cover;
+    background-position: center center;
+    border-radius: 1vw;
+    margin: 1vh;
+    width: 95% !important;
+        }
+    
 }
 
 @media only screen and (min-width: 401px) and (max-width:500px) {
+    .minigameBg{
+    background-size: cover;
+    background-position: center center;
+    border-radius: 1vw;
+    margin: 1vh;
+    width: 100% !important;
+        }    
+    
     #subject-slider {
         width: 300px;
         margin: auto;
@@ -145,6 +171,8 @@ body{
 }
 
 @media only screen and (min-width: 501px) and (max-width:768px) {
+
+    
     #subject-slider {
         width: 400px;
         margin: auto;
