--- a/assets/css/books.css
+++ b/assets/css/books.css
@@ -3,15 +3,15 @@ html{
 }
 
 body{
-     background-image: url("../images/books/Fondo.png");
-    background-size: cover;
+    background-image: url(../images/books/sky.jpg);
+    background-size: 100% 100%;
     background-repeat: no-repeat;
-    background-position: bottom center;
     margin: 0px;
-     overflow-x: hidden;
+    overflow-x: hidden;
     background-color: #73b7c0;
 
 }
+
 
 .new-ribbon{
     position: absolute;
@@ -30,12 +30,12 @@ body{
     min-height: auto;
     transition: all 0.3s;
     position: relative;
-/*
+
     background-image: url(../images/books/floor.png);
     background-repeat: no-repeat;
-    background-size: 100%;
-    background-position: bottom center;
-*/
+    background-size: cover;
+    background-position:center;
+
 }
 
 .section-main{
@@ -103,4 +103,32 @@ body{
     width: 100%;
     height: 90%;
     z-index:213;
+}
+
+@media (max-width: 1000px){
+body{
+    background-image: url(../images/books/Fondo.png);
+    background-size: contain;
+    background-repeat: no-repeat;
+    margin: 0px;
+    overflow-x: hidden;
+    background-color: #73b7c0;
+}    
+    
+#content {
+background-image: none;
+    }
+    
+}
+
+@media (max-width: 560px){
+body{
+    background-image: url(../images/books/Fondo.png);
+    background-size: contain;
+    background-repeat: no-repeat;
+    margin: 0px;
+    overflow-x: hidden;
+    background-color: #73b7c0;
+}  
+    
 }
