--- a/assets/css/play.css
+++ b/assets/css/play.css
@@ -69,7 +69,6 @@ a, a:hover, a:focus {
 
 .navbar {
     width: 100%;
-    padding: 8px 0;
     background: #fff;
     border: none;
     border-radius: 0;
@@ -162,7 +161,7 @@ a, a:hover, a:focus {
 #bs-navbar-collapse-1{
   position: relative;
   float: right;
-  right: 15px;
+  right: 0%;
 }
 
 /* ---------------------------------------------------
@@ -1100,27 +1099,88 @@ footer{
 
 }
 
-/*LOG USER*/
-.loginAccess{
-    background-color: #d01c92;
-    color: #FFF;
-    right: -17%;
-    width: 18%;
-    text-align: center;
-    height: 100%;
-    top: 0%;
-    position: absolute;
-    display: flex;
-    align-items: center;
-    justify-content: center;    
-}
-
-.navbar-login{
-    width: 85%;
-    margin-left: 0;
-    
-}
-
 .mixpanel-call{
     cursor: pointer;
 }
+
+/*LOG USER*/
+
+
+
+.accesButtons{
+    right: 1.5%;
+    float: right !important;
+}
+
+.navbar-right {
+    float: right !important;
+}
+
+#menuUser{
+    margin: 0;
+    padding: 0;
+    display: none;
+    right: 0;
+}
+
+#menuUser div{
+    width: 100%;
+    padding-left: 3vw;
+    padding-right: 3vw;
+    cursor: pointer;
+}
+
+.loginAccess{
+    background-color: #d01c92;
+    color: #FFF;
+    display: flex;
+    align-items: center;
+    justify-content: center;  
+}
+
+.loginAccessMovil{
+    background-color: #d01c92;
+    color: #FFF;
+    display: flex;
+    align-items: center;
+    padding: 2vw;
+    justify-content: center;  
+}
+
+
+.logout {
+    background-color: #7c06b8;
+    color: #FFF;
+    text-align: center;
+    border: 0;
+}
+
+.logout p{
+    color: #FFF;
+    width: 100%;
+    
+}
+.logout img{
+    margin-top:15%;
+    width: 25px;
+}
+
+#menuUserMovil{
+    display: none;
+}
+
+.logoutMovil{
+    background-color: #7c06b8;
+    color: #FFF;
+    text-align: center;
+    border: 0; 
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+}
+
+.logoutMovil img{
+    width: 15%; 
+}
+
