--- a/assets/css/letsplay.css
+++ b/assets/css/letsplay.css
@@ -138,6 +138,24 @@ body{
     width: 95% !important;
         }
     
+        .override-buttons {
+        position: absolute;
+        width: 90%!important;
+        /* margin: auto; */
+        z-index: 3;
+        height: 1px;
+        left: 50%;
+        top: 5%;
+    }
+    
+    .bottom-clouds {
+    padding-bottom: 70px;
+} 
+    
+    .text39{
+        font-size: 4vw;
+    }    
+    
 }
 
 @media only screen and (min-width: 401px) and (max-width:500px) {
@@ -156,9 +174,11 @@ body{
     .override-buttons {
         position: absolute;
         width: 90%!important;
-        margin: auto;
+        /* margin: auto; */
         z-index: 3;
         height: 1px;
+        left: 50%;
+        top: 5%;
     }
     .wallpaper-thumb {
         width: 113px;
@@ -168,27 +188,41 @@ body{
         height: 100px;
     }       
     
+    .bottom-clouds {
+    padding-bottom: 100px;
+    } 
+    
+    .text39{
+        font-size: 4vw;
+    }    
+    
 }
 
 @media only screen and (min-width: 501px) and (max-width:768px) {
 
     
     #subject-slider {
-        width: 400px;
-        margin: auto;
+width: 480px;
+    margin: auto;
+    font-size: 1.3vw;
     }
     .override-buttons {
         position: absolute;
-        width: 550px!important;
-        margin: auto;
+        width: 90%!important;
+        /* margin: auto; */
         z-index: 3;
         height: 1px;
-        transform: translate(0%,0%);
-        
+        left: 50%;
+        top: 5%;
     }
     .wallpaper-thumb {
         width: 113px;
     }
+    
+.bottom-clouds {
+    padding-bottom: 100px;
+}    
+    
 }
 
 @media only screen and (min-width: 769px) {
@@ -198,17 +232,20 @@ body{
     }
     .override-buttons {
         position: absolute;
-        width: 750px!important;
-        margin: auto;
+        width: 90%!important;
+        /* margin: auto; */
         z-index: 3;
         height: 1px;
-        transform: translate(0%,0%);
+        left: 50%;
+        top: 5%;
     }
     .wallpaper-thumb {
         width: 110px;
     }
 
- 
+ .bottom-clouds {
+    padding-bottom: 100px;
+} 
     
 }
 
