--- a/assets/css/letsplay.css
+++ b/assets/css/letsplay.css
@@ -106,6 +106,10 @@ body{
         }
 
 
+    .text18{
+        font-size: 6vh;
+    }
+
 @media only screen and (min-width: 1px) and (max-width:1150px) {
     .mid-container {
         width: 100%;
