--- a/assets/css/letsplay.css
+++ b/assets/css/letsplay.css
@@ -85,14 +85,15 @@ body{
 #nameSubject p{
     position: relative;
     background-color: #C81C8A;
-    color:#FFF;
-    width: 50%;
+    color: #FFF;
+    width: 70%;
     padding: 1vw;
-    margin:2vw;
-    left:50%;
+    margin: 2vw;
+    left: 50%;
     transform: translate(-50%,0%);
     max-width: 500px;
     box-shadow: 10px 10px 0px #3B91FF;
+    font-size: 4vh !important;
 }
 
         .minigameBg{
@@ -105,10 +106,6 @@ body{
     min-height: 180px;
         }
 
-
-    .text18{
-        font-size: 6vh;
-    }
 
 @media only screen and (min-width: 1px) and (max-width:1150px) {
     .mid-container {
@@ -248,7 +245,7 @@ width: 480px;
     }
 
  .bottom-clouds {
-    padding-bottom: 100px;
+    padding-bottom: 190px;
 } 
     
 }
