--- a/assets/css/play.css
+++ b/assets/css/play.css
@@ -19,6 +19,9 @@ p {
 
 .container, .container-fluid{
   padding: 0;
+  background-image: url(../images/patter_site.png);
+  
+  background-size: 10%;
 }
 
 .separator1{
@@ -185,6 +188,27 @@ a, a:hover, a:focus {
     left: 0;
 }
 
+#normal_words{
+    font:Quiksand-Regular;
+    color:gray;
+    font-size: 17pt;
+    display:inline
+}
+
+#especial1{
+    font:Quiksand-Medium;
+    color:deeppink;
+    font-size: 20pt;
+    display:inline
+}
+
+#especial2{
+    font:Quiksand-Medium;
+    color:deepskyblue;
+    font-size: 20pt;
+    display:inline
+}
+
 #dismiss {
     width: 35px;
     height: 35px;
@@ -204,8 +228,8 @@ a, a:hover, a:focus {
     background: #fff;
     color: #d01c92;
 
-    ;
 }
+
 
 .overlay {
     position: fixed;
@@ -410,6 +434,10 @@ a.article, a.article:hover {
 /* ---------------------------------------------------
     play-section-videos
 ----------------------------------------------------- */
+
+
+
+
 #play-section-videos{
  background-image: url('../images/bg-videos-section.png');
  background-size: contain;
@@ -419,11 +447,21 @@ a.article, a.article:hover {
 }
 
 .videos-new-banner{
-  position: absolute;
+  position: relative;
   z-index: 1;
+  display: block;
   max-width: 150px;
   top: -12px;
   left: -1px;
+}
+#NewText{
+    
+    font-size: 25pt;
+    color:#fff;
+    position: relative;
+    transform: rotate(-45deg);
+    top:-100px;
+    left: 10px;
 }
 
 .video-title-container{
@@ -444,7 +482,7 @@ a.article, a.article:hover {
 }
 
 .video-title-container p{
-  font-size: 3vw;
+  font-size: 2vw;
   font-weight: 500;
   text-align: center;
   padding: 10px 0;
@@ -1184,3 +1222,11 @@ footer{
     width: 15%; 
 }
 
+/*PARCHES*/
+
+@media (min-width: 1200px)
+{
+.container {
+    width: 100% !important;
+}
+}
