--- a/assets/css/books.css
+++ b/assets/css/books.css
@@ -27,10 +27,11 @@ body{
 .new-text{
     color: white;
     font-weight: bold;
-    font-size: 2.2vh;
-    text-align: center;
-    padding-top: 0.5vh;
-    padding-right: 3vh;
+    font-size: 2vh;
+    text-align: left;
+    padding-top: 1.5vh;
+    padding-right: 1vh;
+    padding-bottom: 3vh;
     transform: rotate(-45deg);
 }
 
