--- a/assets/css/webisodes.css
+++ b/assets/css/webisodes.css
@@ -18,7 +18,7 @@ footer{
 }
 #title-videos img{
     width: 40%;
-    max-width: 540px
+    max-width: 540px;
 }
 
 
@@ -49,14 +49,15 @@ footer{
     color: #FFF;
     transform: rotate(-40deg);
     position: absolute;
-    top:30%;
+    top:60%;
     left:10%
     z-index: 1;
+    transform-origin: 0% 0%;
 }
 
 .title-name-video{
     text-align: center;
-    font-size: 3vw;
+    font-size: 2vw;
     font-family: 'Luckiest Guy';
     color:#000 ;
     padding: 2vh;
@@ -269,6 +270,11 @@ background-image: url(../images/container_full.png);
     background-image: url(../images/pattern-our-apps.png);
     background-color: #4D9CE8;
     
+}
+
+.title-image{
+    position:absolute;
+    transform-origin: 50% 50%;
 }
 
 
