--- a/assets/css/webisodes.css
+++ b/assets/css/webisodes.css
@@ -44,23 +44,24 @@ footer{
 }
 
 .textNew{
-    font-size: 2.4vw;
+    font-size: 2.5vh;
     font-family: 'Luckiest Guy';
     color: #FFF;
-    transform: rotate(-40deg);
+    transform: rotate(40deg);
     position: absolute;
-    top:60%;
-    left:10%
+    bottom: 60%;
+    left: 50%;
     z-index: 1;
     transform-origin: 0% 0%;
 }
 
 .title-name-video{
-    text-align: center;
+    text-align: left;
     font-size: 2vw;
-    font-family: 'Luckiest Guy';
-    color:#000 ;
+    font-family: 'Quicksand', sans-serif;
+    color: #0ba3f7;
     padding: 2vh;
+    font-weight:bold;
 }
 
 
@@ -74,7 +75,8 @@ footer{
 
 .video-icon{
     position: relative;
-    transform: translate(230%,-130%);
+    transform: translate(350%,-100%);
+    max-height: 6vh;
 }
 
 #wallpaper-slider{
@@ -277,7 +279,11 @@ background-image: url(../images/container_full.png);
     transform-origin: 50% 50%;
 }
 
-
+.video-size{
+    width: 75% !important;
+    margin-left: 12%;
+    margin-top: 3% !important;
+}
 
 /*queries-------------*/
 
