--- a/assets/css/webisodes.css
+++ b/assets/css/webisodes.css
@@ -252,6 +252,15 @@ background-image: url(../images/container_full.png);
     background-position: top center;
 }
 
+.videos-new-banner-yellow{
+  position: absolute;
+  z-index: 1;
+  max-width: 150px;
+  top: -10px;
+    right: 1px !important;
+    /*transform: rotateY(180deg);*/
+}
+
 
 /*helpers-----*/
 
