--- a/assets/css/webisodes.css
+++ b/assets/css/webisodes.css
@@ -255,9 +255,10 @@ background-image: url(../images/container_full.png);
 .videos-new-banner-yellow{
   position: absolute;
   z-index: 1;
+  width: 15vw;
   max-width: 150px;
   top: -10px;
-    right: 1px !important;
+  right: 1px !important;
     /*transform: rotateY(180deg);*/
 }
 
