--- a/assets/css/letsplay.css
+++ b/assets/css/letsplay.css
@@ -19,13 +19,19 @@ body{
     background-position: bottom center;
     background-size: 100%;
     background-repeat: no-repeat;
-    padding-bottom: 180px;
+    padding-bottom: 18%;
 }
 
 .main-title {
-    font-size: 8vh;
+    font-size: 8vw;
     font-weight: 600;
     color: white;
+}
+
+@media screen and (min-width: 1200px) {
+    .main-title {
+        font-size: 64px;
+    }
 }
 
 .secondsub-title {
@@ -55,12 +61,16 @@ body{
 #subject-slider {
     width: 70%;
     margin: auto;
-    
+
 }
 
 #tab-minigames{
     margin-top: -10%;
-    margin-left: 5%;
+    margin-left: auto;
+    width: 100vw;
+    margin-right: auto;
+    /*! min-width: 300px; */
+    max-width: 100vh;
 }
 
 .img-minigames{
@@ -83,25 +93,25 @@ body{
 }
 
 #backGround{
-    
-  background-image: url(../images/patter_site.png);
-  background-size: 10%;
-    
+
+    background-image: url(../images/patter_site.png);
+    background-size: 10%;
+
 }
 
 #nameSubject p{
-   
+
 }
 
-    .minigameBg{
+.minigameBg{
     height: 15vh;
-    background-size: cover;
+    background-size: contain;
     background-position: center center;
     border-radius: 1vw;
-    margin: 1vh;
-    width: 30%;
+    margin: 0 0 2vh;
     min-height: 180px;
-        }
+    background-repeat: no-repeat;
+}
 
 
 @media only screen and (min-width: 1px) and (max-width:1150px) {
@@ -121,22 +131,22 @@ body{
 }
 
 @media only screen and (min-width: 320px) and (max-width:400px) {
-    #subject-slider {
-        width: 90%;
-        margin: auto;
-    }
+    /*#subject-slider {*/
+    /*width: 90%;*/
+    /*margin: auto;*/
+    /*}*/
     .wallpaper-thumb {
         width: 113px;
     }
-        .minigameBg{
-    background-size: cover;
-    background-position: center center;
-    border-radius: 1vw;
-    margin: 1vh;
-    width: 95% !important;
-        }
-    
-        .override-buttons {
+    .minigameBg{
+        background-position: center center;
+        border-radius: 1vw;
+        margin-left: auto;
+        width: 100%;
+        margin-right: auto;
+    }
+
+    .override-buttons {
         position: absolute;
         width: 90%!important;
         /* margin: auto; */
@@ -145,30 +155,26 @@ body{
         left: 50%;
         top: 5%;
     }
-    
-    .bottom-clouds {
-    padding-bottom: 70px;
-} 
-    
+
     .text39{
         font-size: 4vw;
-    }    
-    
+    }
+
 }
 
 @media only screen and (min-width: 401px) and (max-width:500px) {
     .minigameBg{
-    background-size: cover;
-    background-position: center center;
-    border-radius: 1vw;
-    margin: 1vh;
-    width: 100% !important;
-        }    
-    
-    #subject-slider {
-        width: 300px;
-        margin: auto;
+        background-position: center center;
+        border-radius: 1vw;
+        margin-left: auto;
+        width: 100%;
+        margin-right: auto;
     }
+
+    /*#subject-slider {*/
+    /*width: 300px;*/
+    /*margin: auto;*/
+    /*}*/
     .override-buttons {
         position: absolute;
         width: 90%!important;
@@ -184,26 +190,26 @@ body{
 
     .img-minigames {
         height: 100px;
-    }       
-    
+    }
+
     .bottom-clouds {
-    padding-bottom: 100px;
-    } 
-    
+        /*padding-bottom: 100px;*/
+    }
+
     .text39{
         font-size: 4vw;
-    }    
-    
+    }
+
 }
 
 @media only screen and (min-width: 501px) and (max-width:768px) {
 
-    
-    #subject-slider {
-width: 480px;
-    margin: auto;
-    font-size: 1.3vw;
-    }
+
+    /*#subject-slider {*/
+    /*width: 480px;*/
+    /*margin: auto;*/
+    /*font-size: 1.3vw;*/
+    /*}*/
     .override-buttons {
         position: absolute;
         width: 90%!important;
@@ -216,18 +222,18 @@ width: 480px;
     .wallpaper-thumb {
         width: 113px;
     }
-    
-.bottom-clouds {
-    padding-bottom: 100px;
-}    
-    
+
+    /*.bottom-clouds {*/
+    /*padding-bottom: 100px;*/
+    /*}*/
+
 }
 
 @media only screen and (min-width: 769px) {
-    #subject-slider {
-        width: 600px;
-        margin: auto;
-    }
+    /*#subject-slider {*/
+    /*width: 600px;*/
+    /*margin: auto;*/
+    /*}*/
     .override-buttons {
         position: absolute;
         /*width: 690px!important;*/
@@ -243,15 +249,15 @@ width: 480px;
         width: 110px;
     }
 
- .bottom-clouds {
-    padding-bottom: 190px;
-} 
-    
+    .bottom-clouds {
+        /*! padding-bottom: 190px; */
+    }
+
 }
 
 @media only screen and (max-width:319px) {
 
-    
+
     #subject-slider {
         display: none;
     }
@@ -261,10 +267,10 @@ width: 480px;
 @media all and (orientation:portrait)
 {
 
-.img-minigames{
-    border-radius: 2vh;
-    width: 300px !important;
-    height: 90px !important;
-    padding: 1vh;
-}
+    .img-minigames{
+        border-radius: 2vh;
+        width: 300px !important;
+        height: 90px !important;
+        padding: 1vh;
+    }
 }
