--- a/assets/css/letsplay.css
+++ b/assets/css/letsplay.css
@@ -142,7 +142,7 @@ body{
         background-position: center center;
         border-radius: 1vw;
         margin-left: auto;
-        width: 100%;
+        /*width: 100%;*/
         margin-right: auto;
     }
 
@@ -167,7 +167,7 @@ body{
         background-position: center center;
         border-radius: 1vw;
         margin-left: auto;
-        width: 100%;
+        /*width: 100%;*/
         margin-right: auto;
     }
 
