--- a/assets/css/books.css
+++ b/assets/css/books.css
@@ -57,6 +57,7 @@ body{
 .panel-player{
     display: flex;
     align-items: center;
+    margin-top: 150px
 }
 
 
@@ -89,6 +90,7 @@ cursor:pointer;
 /*COVERFLOW*/
 .w-gallery{
     position: absolute;
+    margin-top: 100px;
     left: 50%;
     z-index: 2;
     width: 80%;
